website/versioned_docs/version-2.4.1/react-native.md
---
id: version-2.4.1-react-native
title: react-native package
hide_title: true
original_id: react-native
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## react-native package

## Classes

|  Class | Description |
|  --- | --- |
|  [AuthContainer](./react-native.authcontainer.md) | Skygear Auth APIs. |
|  [BaseAPIClient](./react-native.baseapiclient.md) |  |
|  [CancelError](./react-native.cancelerror.md) | CancelError is an error to represent cancel. |
|  [Container](./react-native.container.md) | Skygear APIs container. |
|  [GlobalJSONContainerStorage](./react-native.globaljsoncontainerstorage.md) |  |
|  [ImageProcessingPipelineBuilder](./react-native.imageprocessingpipelinebuilder.md) | Image processing pipeline builder. |
|  [OIDCContainer](./react-native.oidccontainer.md) | Skygear Auth OIDC client APIs. |
|  [ReactNativeAPIClient](./react-native.reactnativeapiclient.md) |  |
|  [ReactNativeAssetContainer](./react-native.reactnativeassetcontainer.md) | Skygear Asset APIs (for React Native). |
|  [ReactNativeAsyncStorageStorageDriver](./react-native.reactnativeasyncstoragestoragedriver.md) |  |
|  [ReactNativeAuthContainer](./react-native.reactnativeauthcontainer.md) | Skygear Auth APIs (for React Native). |
|  [ReactNativeContainer](./react-native.reactnativecontainer.md) | Skygear APIs container (for React Native). |
|  [ReactNativeOIDCContainer](./react-native.reactnativeoidccontainer.md) | Skygear OIDC APIs (for React Native). |
|  [SkygearError](./react-native.skygearerror.md) | Skygear API error. |

## Functions

|  Function | Description |
|  --- | --- |
|  [addAppleIDCredentialRevokedListener(listener)](./react-native.addappleidcredentialrevokedlistener.md) |  |
|  [decodeAuthResponse(r)](./react-native.decodeauthresponse.md) |  |
|  [decodeError(err)](./react-native.decodeerror.md) |  |
|  [decodeIdentity(i)](./react-native.decodeidentity.md) |  |
|  [decodeSession(s)](./react-native.decodesession.md) |  |
|  [decodeUser(u)](./react-native.decodeuser.md) |  |
|  [encodeIdentity(i)](./react-native.encodeidentity.md) |  |
|  [encodeUser(u)](./react-native.encodeuser.md) |  |
|  [getCredentialStateForUserID(userID)](./react-native.getcredentialstateforuserid.md) |  |
|  [isValidationError(err)](./react-native.isvalidationerror.md) | Check if the provided error indicates the server failed to validate input parameters to API. |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [AuthorizeOptions](./react-native.authorizeoptions.md) | Auth UI authorization options |
|  [AuthResponse](./react-native.authresponse.md) |  |
|  [ByteArray](./react-native.bytearray.md) |  |
|  [ChallengeResponse](./react-native.challengeresponse.md) |  |
|  [ConfigureOptions](./react-native.configureoptions.md) |  |
|  [ContainerOptions](./react-native.containeroptions.md) |  |
|  [ContainerStorage](./react-native.containerstorage.md) |  |
|  [CustomTokenIdentity](./react-native.customtokenidentity.md) |  |
|  [ExtraSessionInfoOptions](./react-native.extrasessioninfooptions.md) |  |
|  [Identity](./react-native.identity.md) |  |
|  [IdentityClaims](./react-native.identityclaims.md) |  |
|  [ImageProcessingPipelineBuilderResizeOptions](./react-native.imageprocessingpipelinebuilderresizeoptions.md) |  |
|  [OAuthError](./react-native.oautherror.md) | OAuthError represents the oauth error response. https://tools.ietf.org/html/rfc6749\#section-4.1.2.1 |
|  [OAuthIdentity](./react-native.oauthidentity.md) |  |
|  [OAuthManualAuthorizationURLOptions](./react-native.oauthmanualauthorizationurloptions.md) |  |
|  [OAuthMobileAppAuthorizationURLOptions](./react-native.oauthmobileappauthorizationurloptions.md) |  |
|  [OAuthWebPopupAuthorizationURLOptions](./react-native.oauthwebpopupauthorizationurloptions.md) |  |
|  [OAuthWebRedirectAuthorizationURLOptions](./react-native.oauthwebredirectauthorizationurloptions.md) |  |
|  [PasswordIdentity](./react-native.passwordidentity.md) |  |
|  [PromoteOptions](./react-native.promoteoptions.md) | Auth UI anonymous user promotion options |
|  [Session](./react-native.session.md) |  |
|  [SessionUserAgent](./react-native.sessionuseragent.md) |  |
|  [SSOLoginOptions](./react-native.ssologinoptions.md) |  |
|  [StorageDriver](./react-native.storagedriver.md) |  |
|  [UploadAssetOptions](./react-native.uploadassetoptions.md) |  |
|  [User](./react-native.user.md) |  |
|  [ValidationError](./react-native.validationerror.md) |  |
|  [ValidationErrorCauseBase](./react-native.validationerrorcausebase.md) |  |
|  [ValidationErrorExpectationDetails](./react-native.validationerrorexpectationdetails.md) |  |
|  [ValidationErrorFormatDetails](./react-native.validationerrorformatdetails.md) |  |
|  [ValidationErrorRangeDetails](./react-native.validationerrorrangedetails.md) |  |

## Variables

|  Variable | Description |
|  --- | --- |
|  [CANCEL](./react-native.cancel.md) | CANCEL is sentinel value for cancel. |
|  [defaultContainer](./react-native.defaultcontainer.md) | Default Skygear APIs container. |
|  [SkygearErrorNames](./react-native.skygearerrornames.md) |  |
|  [ValidationErrorKinds](./react-native.validationerrorkinds.md) |  |
|  [VERSION](./react-native.version.md) |  |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [FullOAuthAuthorizationURLOptions](./react-native.fulloauthauthorizationurloptions.md) |  |
|  [JSONObject](./react-native.jsonobject.md) |  |
|  [JSONValue](./react-native.jsonvalue.md) |  |
|  [OAuthAuthorizationURLOptions](./react-native.oauthauthorizationurloptions.md) |  |
|  [SkygearErrorName](./react-native.skygearerrorname.md) |  |
|  [ValidationErrorCause](./react-native.validationerrorcause.md) |  |
|  [ValidationErrorKind](./react-native.validationerrorkind.md) |  |
|  [ValidationInvalidConstantCause](./react-native.validationinvalidconstantcause.md) |  |
|  [ValidationInvalidEntryAmountCause](./react-native.validationinvalidentryamountcause.md) |  |
|  [ValidationInvalidEnumCause](./react-native.validationinvalidenumcause.md) |  |
|  [ValidationInvalidNumberRangeCause](./react-native.validationinvalidnumberrangecause.md) |  |
|  [ValidationInvalidStringFormatCause](./react-native.validationinvalidstringformatcause.md) |  |
|  [ValidationInvalidStringLengthCause](./react-native.validationinvalidstringlengthcause.md) |  |
|  [ValidationInvalidTypeCause](./react-native.validationinvalidtypecause.md) |  |

